{{$NEXT}}

0.003     2015-08-24 01:14:01 EDT
  - Fix attribute setters to be chainable

0.002     2015-08-23 22:19:34 EDT
  - Slightly improve performance of encoding log messages

0.001     2015-08-23 21:27:00 EDT
  - First release