@@ -4,7 +4,7 @@
       "Dan Book <dbook@cpan.org>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 5.039, CPAN::Meta::Converter version 2.150005",
+   "generated_by" : "Dist::Zilla version 5.040, CPAN::Meta::Converter version 2.150005",
    "license" : [
       "artistic_2"
    ],
@@ -15,12 +15,12 @@
    "name" : "Log-Emitter",
    "no_index" : {
       "directory" : [
-         "t",
-         "xt",
+         "eg",
+         "examples",
          "inc",
          "share",
-         "eg",
-         "examples"
+         "t",
+         "xt"
       ]
    },
    "prereqs" : {
@@ -31,7 +31,6 @@
       },
       "develop" : {
          "requires" : {
-            "Dist::Zilla::PluginBundle::Author::DBOOK" : "0.011",
             "Pod::Coverage::TrustPod" : "0",
             "Test::Pod" : "1.41",
             "Test::Pod::Coverage" : "1.08"
@@ -40,13 +39,13 @@
       "runtime" : {
          "requires" : {
             "Carp" : "0",
+            "Class::Method::Modifiers" : "0",
+            "Class::Tiny::Chained" : "0",
             "Encode" : "0",
             "Fcntl" : "0",
             "IO::Handle" : "0",
-            "Moo" : "2.000002",
-            "MooX::ChainedAttributes" : "0.04",
-            "Role::EventEmitter" : "0.001",
-            "namespace::clean" : "0",
+            "Role::EventEmitter" : "0.002",
+            "Role::Tiny::With" : "2.000001",
             "perl" : "5.006"
          }
       },
@@ -61,7 +60,7 @@
    "provides" : {
       "Log::Emitter" : {
          "file" : "lib/Log/Emitter.pm",
-         "version" : "0.003"
+         "version" : "0.004"
       }
    },
    "release_status" : "stable",
@@ -76,7 +75,7 @@
          "web" : "https://github.com/Grinnz/Log-Emitter"
       }
    },
-   "version" : "0.003",
+   "version" : "0.004",
    "x_contributors" : [
       "Dan Book <grinnz@grinnz.com>"
    ]
