@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.039.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.040.
 use strict;
 use warnings;
 
@@ -18,20 +18,20 @@ my %WriteMakefileArgs = (
   "NAME" => "Log::Emitter",
   "PREREQ_PM" => {
     "Carp" => 0,
+    "Class::Method::Modifiers" => 0,
+    "Class::Tiny::Chained" => 0,
     "Encode" => 0,
     "Fcntl" => 0,
     "IO::Handle" => 0,
-    "Moo" => "2.000002",
-    "MooX::ChainedAttributes" => "0.04",
-    "Role::EventEmitter" => "0.001",
-    "namespace::clean" => 0
+    "Role::EventEmitter" => "0.002",
+    "Role::Tiny::With" => "2.000001"
   },
   "TEST_REQUIRES" => {
     "File::Spec::Functions" => 0,
     "File::Temp" => 0,
     "Test::More" => "0.88"
   },
-  "VERSION" => "0.003",
+  "VERSION" => "0.004",
   "test" => {
     "TESTS" => "t/*.t"
   }
@@ -40,16 +40,16 @@ my %WriteMakefileArgs = (
 
 my %FallbackPrereqs = (
   "Carp" => 0,
+  "Class::Method::Modifiers" => 0,
+  "Class::Tiny::Chained" => 0,
   "Encode" => 0,
   "Fcntl" => 0,
   "File::Spec::Functions" => 0,
   "File::Temp" => 0,
   "IO::Handle" => 0,
-  "Moo" => "2.000002",
-  "MooX::ChainedAttributes" => "0.04",
-  "Role::EventEmitter" => "0.001",
-  "Test::More" => "0.88",
-  "namespace::clean" => 0
+  "Role::EventEmitter" => "0.002",
+  "Role::Tiny::With" => "2.000001",
+  "Test::More" => "0.88"
 );
 
 
